kubernetes/manifests/monitoring/prometheus/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: prometheus
  namespace: prometheus

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - prom.vipyrsec.com
      secretName: prom-tls

  rules:
    - host: prom.vipyrsec.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
